--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <div class="user-profile"></div>
       <div class="rightsection">
         <h1 class="username"></h1>
-        <p class="bio"></p>
+        <p class="bio_desc"></p>
         <div class="location flex-align"></div>
         <p class="twitter"></p>
       </div>
