--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             type="text"
             id="usernameInput"
             name="username"
-            placeholder="Enter GitHub username"
+            placeholder="Username"
           />
           <input
             type="number"
@@ -27,7 +27,7 @@
             min="10"
             max="100"
             step="10"
-            placeholder="Repos per page (def:10)"
+            placeholder="Repos/page (>=10)"
           />
           <button type="submit">Submit</button>
           <p id="errorText" class="error-text"></p>
