--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             step="10"
             placeholder="Repos/page (>=10)"
           />
-          <button type="submit">Submit</button>
+          <button class="submit" type="submit">Submit</button>
           <p id="errorText" class="error-text"></p>
         </div>
       </form>
